--- a/index.html
+++ b/index.html
@@ -213,7 +213,77 @@
     <div
         class="relative w-full flex flex-col justify-start items-start gap-y-[50px] pt-[50px] pb-[100px] overflow-hidden">
         <div class="absolute w-full flex justify-end bottom-[0px] right-[0px]">
-
+            <div class="w-[1px] h-[1px] pointer-events-none"
+                style="box-shadow: rgba(189, 22, 44, 0.2) 0px 0px 100px 200px;">
+            </div>
+        </div>
+        <div class="w-full flex flex-col justify-center items-center">
+            <p class="text-[24px] text-[#BD162C] font-[700]">INTELIGÊNCIA ARTIFICIAL</p>
+            <p class="text-[18px] sm:text-[32px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[400]">UPSCALING E FRAME
+                GENERATION</p>
+        </div>
+        <div class="w-full flex justify-center items-center">
+            <img src="./assets/computer.png" alt="Monitor" width="800">
+        </div>
+        <div class="w-full flex flex-wrap justify-center items-center gap-[40px] px-[20px]">
+            <div
+                class="w-[400px] h-[500px] bg-[#F0F0F0] dark:bg-[#222222] flex flex-col justify-start items-start gap-y-[20px] border border-[rgba(0,0,0,0.1)] dark:border-[rgba(255,255,255,0.1)] rounded-[4px] p-[20px]">
+                <h2 class="text-[18px] bg-[#BD162C] text-[#FFFFFF] font-[700] px-[10px] py-[5px] rounded-[4px]">
+                    UPSCALING</h2>
+                <p class="text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] font-[400]">Aumente seu desempenho em até 200
+                    FPS a mais ao aplicar alguns dos algoritmos upscaling abaixo:</p>
+                <ul class="flex flex-col justify-start items-start gap-y-[10px]">
+                    <li class="flex justify-start items-center gap-x-[5px]">
+                        <img width="18" height="18" src="./assets/box.png">
+                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">AMD Fidelity Super Resolution</p>
+                    </li>
+                    <li class="flex justify-start items-center gap-x-[5px]">
+                        <img width="18" height="18" src="./assets/box.png">
+                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">NVIDIA Image Scaling</p>
+                    </li>
+                    <li class="flex justify-start items-center gap-x-[5px]">
+                        <img width="18" height="18" src="./assets/box.png">
+                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">Integer Number</p>
+                    </li>
+                    <li class="flex justify-start items-center gap-x-[5px]">
+                        <img width="18" height="18" src="./assets/box.png">
+                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">Nearest Neighbor</p>
+                    </li>
+                    <li class="flex justify-start items-center gap-x-[5px]">
+                        <img width="18" height="18" src="./assets/box.png">
+                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">xBR</p>
+                    </li>
+                    <li class="flex justify-start items-center gap-x-[5px]">
+                        <img width="18" height="18" src="./assets/box.png">
+                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">Anime4K</p>
+                    </li>
+                    <li class="flex justify-start items-center gap-x-[5px]">
+                        <img width="18" height="18" src="./assets/box.png">
+                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">Sharp Bilinear</p>
+                    </li>
+                    <li class="flex justify-start items-center gap-x-[5px]">
+                        <img width="18" height="18" src="./assets/box.png">
+                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">FFUS (FiveFPS Upscaling)</p>
+                    </li>
+                    <li class="flex justify-start items-center gap-x-[5px]">
+                        <img width="18" height="18" src="./assets/box.png">
+                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">Bicubic CAS</p>
+                    </li>
+                </ul>
+            </div>
+            <div
+                class="w-[400px] h-[500px] bg-[#F0F0F0] dark:bg-[#222222] flex flex-col justify-start items-start gap-y-[20px] border border-[rgba(0,0,0,0.1)] dark:border-[rgba(255,255,255,0.1)] rounded-[4px] p-[20px]">
+                <h2 class="text-[18px] bg-[#BD162C] text-[#FFFFFF] font-[700] px-[10px] py-[5px] rounded-[4px]">FRAME
+                    GENERATION</h2>
+                <p class="text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] font-[400]">Eleve a qualidade de seus jogos de
+                    30 FPS para 60 FPS ou de 60 FPS para 120 FPS.</p>
+                <ul class="flex flex-col justify-start items-start gap-y-[10px]">
+                    <li class="flex justify-start items-center gap-x-[5px]">
+                        <img width="18" height="18" src="./assets/box.png">
+                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">FFFG (FiveFPS Frame Generation)</p>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -533,7 +603,7 @@
                 <p class="text-[16px] text-[#FAFAFA] font-[400] text-center">Com apenas alguns
                     cliques, você será capaz de usar todas nossas otimizações e nossa Inteligência Artificial!</p>
             </div>
-            <div class="w-full flex flex-col justify-start items-start gap-[40px]">
+            <div class="w-full flex flex-col justify-start items-start gap-[40px]" id="experimente">
                 <div class="relative w-full rounded-[4px] overflow-hidden cursor-pointer">
                     <div class="w-full" style="opacity: 1;">
                         <div class="absolute top-[60px] left-[60px]" style="opacity: 0;">
@@ -543,10 +613,11 @@
                         <div class="absolute bottom-[60px] right-[60px]" style="opacity: 0;">
                             <div class="w-[1px] h-[1px] pointer-events-none"
                                 style="box-shadow: rgba(255, 255, 255, 0.5) 0px 0px 400px 100px;"></div>
-                        </div><img alt="" src="./assets/cs2-with-perf-overlay.webp" width="100%" style="opacity: 1;">
+                        </div><img alt="" src="./assets/cs2-with-perf-overlay.webp" width="100%" style="opacity: 1;"
+                            id="experimenteImg">
                     </div>
                 </div>
-                <div class="w-full grid grid-cols-2 gap-[40px]">
+                <div class="w-full grid grid-cols-2 gap-[20px]" id="experimentContent">
                     <div class="w-full h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
                         <div class="flex justify-start items-center gap-x-[10px]">
                             <div
@@ -556,7 +627,8 @@
                             <p class="max-w-[130px] text-[14px] text-[#FFFFFF] truncate">Windows
                                 Tweaks</p>
                         </div>
-                        <p class="text-[12px] text-[#BABABABA]">Aplique diversas otimizações para o
+                        <p class="text-[12px] text-[#BABABABA]">Aplique diversas otimizações para
+                            o
                             seu sistema operacional e para sua placa gráfica!</p>
                     </div>
                     <div class="w-full h-[150px] flex flex-col justify-start items-start gap-y-[10px]">
@@ -623,7 +695,7 @@
             </div>
             <div class="w-[220px] h-[220px] flex justify-center items-center bg-[#BD162C]">
                 <div class="w-[180px] h-[180px]"
-                    style="background-image: url(assets/intel.png); background-size: contain; background-position: center center; background-repeat: no-repeat;">
+                    style="background-image: url(assets/intel.svg); background-size: contain; background-position: center center; background-repeat: no-repeat;">
                 </div>
             </div>
         </div>
@@ -704,7 +776,8 @@
             </ul>
         </div>
         <div class="plans__card-btn">
-            <button class="card-btn">OBTENHA AGORA!</button>
+            <button class="border-none font-extrabold p-4 rounded-sm w-[360px] h-[50px] text-center"
+            style="background-color: var(--vermelho); color: var(--branco-principal);">OBTENHA AGORA!</button>
         </div>
     </section>
 
