--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
         </div>
         <div class="plans__card-btn">
             <button class="border-none font-extrabold p-4 rounded-sm w-[360px] h-[50px] text-center"
-            style="background-color: var(--vermelho); color: var(--branco-principal);">OBTENHA AGORA!</button>
+                style="background-color: var(--vermelho); color: var(--branco-principal);">OBTENHA AGORA!</button>
         </div>
     </section>
 
@@ -837,7 +837,7 @@
 
     <div
         class="w-full flex flex-col md:flex-row justify-center items-center bg-[#000000] gap-y-[40px] md:gap-x-[80px] px-[40px] py-[90px]">
-        <img width="300px" src="./assets/7days.png">
+        <img width="300px" src="./assets/SELO.svg">
         <div class="flex flex-col justify-center items-center gap-y-[5px]">
             <p class="text-[24px] text-[#FFFFFF] text-center font-[700] max-w-[400px]">Política de Devolução</p>
             <p class="text-[14px] text-[#BABABA] text-center font-[400] max-w-[400px]">Se em até <span
