--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         </div>
         <div class="w-full flex flex-col justify-center items-center">
             <p class="text-[24px] text-[#BD162C] font-[700]">INTELIGÊNCIA ARTIFICIAL</p>
-            <p class="text-[18px] sm:text-[32px] text-[#4A4A4A] dark:text-[#FAFAFA] font-[400]">UPSCALING E FRAME
+            <p class="text-[18px] sm:text-[32px] text-[#FAFAFA] font-[400]">UPSCALING E FRAME
                 GENERATION</p>
         </div>
         <div class="w-full flex justify-center items-center">
@@ -251,60 +251,60 @@
         </div>
         <div class="w-full flex flex-wrap justify-center items-center gap-[40px] px-[20px]">
             <div
-                class="w-[400px] h-[500px] bg-[#F0F0F0] dark:bg-[#222222] flex flex-col justify-start items-start gap-y-[20px] border border-[rgba(0,0,0,0.1)] dark:border-[rgba(255,255,255,0.1)] rounded-[4px] p-[20px]">
+                class="w-[400px] h-[500px] bg-[#222222] flex flex-col justify-start items-start gap-y-[20px] border border-[rgba(255,255,255,0.1)] rounded-[4px] p-[20px]">
                 <h2 class="text-[18px] bg-[#BD162C] text-[#FFFFFF] font-[700] px-[10px] py-[5px] rounded-[4px]">
                     UPSCALING</h2>
-                <p class="text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] font-[400]">Aumente seu desempenho em até 200
+                <p class="text-[14px] text-[#FFFFFF] font-[400]">Aumente seu desempenho em até 200
                     FPS a mais ao aplicar alguns dos algoritmos upscaling abaixo:</p>
                 <ul class="flex flex-col justify-start items-start gap-y-[10px]">
                     <li class="flex justify-start items-center gap-x-[5px]">
                         <img width="18" height="18" src="./assets/box.png">
-                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">AMD Fidelity Super Resolution</p>
+                        <p class="text-[14px] text-[#BABABA]">AMD Fidelity Super Resolution</p>
                     </li>
                     <li class="flex justify-start items-center gap-x-[5px]">
                         <img width="18" height="18" src="./assets/box.png">
-                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">NVIDIA Image Scaling</p>
+                        <p class="text-[14px] text-[#BABABA]">NVIDIA Image Scaling</p>
                     </li>
                     <li class="flex justify-start items-center gap-x-[5px]">
                         <img width="18" height="18" src="./assets/box.png">
-                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">Integer Number</p>
+                        <p class="text-[14px] text-[#BABABA]">Integer Number</p>
                     </li>
                     <li class="flex justify-start items-center gap-x-[5px]">
                         <img width="18" height="18" src="./assets/box.png">
-                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">Nearest Neighbor</p>
+                        <p class="text-[14px] text-[#BABABA]">Nearest Neighbor</p>
                     </li>
                     <li class="flex justify-start items-center gap-x-[5px]">
                         <img width="18" height="18" src="./assets/box.png">
-                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">xBR</p>
+                        <p class="text-[14px] text-[#BABABA]">xBR</p>
                     </li>
                     <li class="flex justify-start items-center gap-x-[5px]">
                         <img width="18" height="18" src="./assets/box.png">
-                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">Anime4K</p>
+                        <p class="text-[14px] text-[#BABABA]">Anime4K</p>
                     </li>
                     <li class="flex justify-start items-center gap-x-[5px]">
                         <img width="18" height="18" src="./assets/box.png">
-                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">Sharp Bilinear</p>
+                        <p class="text-[14px] text-[#BABABA]">Sharp Bilinear</p>
                     </li>
                     <li class="flex justify-start items-center gap-x-[5px]">
                         <img width="18" height="18" src="./assets/box.png">
-                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">FFUS (FiveFPS Upscaling)</p>
+                        <p class="text-[14px] text-[#BABABA]">FFUS (FiveFPS Upscaling)</p>
                     </li>
                     <li class="flex justify-start items-center gap-x-[5px]">
                         <img width="18" height="18" src="./assets/box.png">
-                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">Bicubic CAS</p>
+                        <p class="text-[14px] text-[#BABABA]">Bicubic CAS</p>
                     </li>
                 </ul>
             </div>
             <div
-                class="w-[400px] h-[500px] bg-[#F0F0F0] dark:bg-[#222222] flex flex-col justify-start items-start gap-y-[20px] border border-[rgba(0,0,0,0.1)] dark:border-[rgba(255,255,255,0.1)] rounded-[4px] p-[20px]">
+                class="w-[400px] h-[500px] bg-[#222222] flex flex-col justify-start items-start gap-y-[20px] border border-[rgba(255,255,255,0.1)] rounded-[4px] p-[20px]">
                 <h2 class="text-[18px] bg-[#BD162C] text-[#FFFFFF] font-[700] px-[10px] py-[5px] rounded-[4px]">FRAME
                     GENERATION</h2>
-                <p class="text-[14px] text-[#4A4A4A] dark:text-[#FFFFFF] font-[400]">Eleve a qualidade de seus jogos de
+                <p class="text-[14px] text-[#FFFFFF] font-[400]">Eleve a qualidade de seus jogos de
                     30 FPS para 60 FPS ou de 60 FPS para 120 FPS.</p>
                 <ul class="flex flex-col justify-start items-start gap-y-[10px]">
                     <li class="flex justify-start items-center gap-x-[5px]">
                         <img width="18" height="18" src="./assets/box.png">
-                        <p class="text-[14px] text-[#4A4A4A] dark:text-[#BABABA]">FFFG (FiveFPS Frame Generation)</p>
+                        <p class="text-[14px] text-[#BABABA]">FFFG (FiveFPS Frame Generation)</p>
                     </li>
                 </ul>
             </div>
